# super-auto-comb

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: test-package.yaml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
src/super_auto_comb/: calc.py  cli.py  deglitch.py  fix_files.py  load_files.py  track_changes.py  utils.py
tests/: test_calc.py  test_cli.py  test_load_files.py  test_track_changes.py  test_utils.py
tests/samples/: 220321_1_Frequ.txt  super-auto-comb.txt  super-auto-last.txt
