[tool.poetry]
name = "super-auto-comb"
version = "1.1.0"
description = ""
authors = ["Marco Pizzocaro <m.pizzocaro@inrim.it>"]
readme = "README.md"
packages = [{include = "super_auto_comb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "^1.14.1"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
tintervals = "^0.1.7"
pandas = "^2.2.2"
configargparse = "^1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.4.7"
myst-parser = "^3.0.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.9.3"
sphinx-autoapi = "^3.3.1"
starlette = "^0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
super-auto-comb = "super_auto_comb.cli:cli"

[tool.ruff]
line-length = 120